--- a/Noted/Base.lproj/Main.storyboard
+++ b/Noted/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="ouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q0r-UO-mxi"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -29,6 +32,9 @@
                             <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZTR-Yh-0wY"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="whatnot" destination="qFJ-vg-VzD" id="Cqy-93-uVz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
