--- a/Noted/Base.lproj/Main.storyboard
+++ b/Noted/Base.lproj/Main.storyboard
@@ -25,14 +25,23 @@
                                     <action selector="ouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q0r-UO-mxi"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7m-XZ-cep">
+                                <rect key="frame" x="279" y="289" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="qFJ-vg-VzD" secondAttribute="bottom" constant="20" symbolic="YES" id="HSb-Hb-RYS"/>
-                            <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZTR-Yh-0wY"/>
+                            <constraint firstItem="n7m-XZ-cep" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="269" id="TK8-Tg-iWE"/>
+                            <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iQ9-ur-XSB"/>
+                            <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="n7m-XZ-cep" secondAttribute="centerX" id="ja0-nN-Shi"/>
+                            <constraint firstAttribute="bottom" secondItem="qFJ-vg-VzD" secondAttribute="bottom" constant="20" symbolic="YES" id="o7m-U3-cs4"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="hahah" destination="n7m-XZ-cep" id="oMl-0c-FgD"/>
                         <outlet property="whatnot" destination="qFJ-vg-VzD" id="Cqy-93-uVz"/>
                     </connections>
                 </viewController>
