--- a/Noted/Base.lproj/Main.storyboard
+++ b/Noted/Base.lproj/Main.storyboard
@@ -31,10 +31,20 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sl7-rO-jWX">
+                                <rect key="frame" x="252" y="222" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="sh3-xv-VHm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="n7m-XZ-cep" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="269" id="TK8-Tg-iWE"/>
+                            <constraint firstItem="n7m-XZ-cep" firstAttribute="top" secondItem="sl7-rO-jWX" secondAttribute="bottom" constant="37" id="TLh-0P-XNj"/>
+                            <constraint firstItem="sl7-rO-jWX" firstAttribute="centerX" secondItem="n7m-XZ-cep" secondAttribute="centerX" id="gl3-6E-tkT"/>
                             <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iQ9-ur-XSB"/>
                             <constraint firstItem="qFJ-vg-VzD" firstAttribute="centerX" secondItem="n7m-XZ-cep" secondAttribute="centerX" id="ja0-nN-Shi"/>
                             <constraint firstAttribute="bottom" secondItem="qFJ-vg-VzD" secondAttribute="bottom" constant="20" symbolic="YES" id="o7m-U3-cs4"/>
@@ -47,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="555" y="538"/>
+            <point key="canvasLocation" x="274" y="347"/>
         </scene>
     </scenes>
 </document>
